added Header and Footer desctop size

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="ukr">
 
 <head>
     <title>Massa знань</title>
@@ -16,31 +16,74 @@
 
 
     <header class="header">
+
         <div class="container">
 
             <div class="header-top">
-                <div class="header-top__logo">
-                    <img class="header-top__logo-img" src="" alt="Логотип Масса знань">
-                </div>
+
+                <img class="header-top__logo-img" src="images/logo.png" alt="Логотип Масса знань">
+
 
                 <div class="header-top__links">
-                    <a href="" class="header-top__link">
-                        <img src="" alt="" class="header-top__link-img">
+                    <a href="#" class="header-top__link">
+                        <img src="images/icons/facebook-icon.svg" alt="" class="header-top__link-img">
                     </a>
-                    <a href="" class="header-top__link">
-                        <img src="" alt="" class="header-top__link-img">
+                    <a href="#" class="header-top__link">
+                        <img src="images/icons/telegram-icon.svg" alt="" class="header-top__link-img">
                     </a>
-                    <a href="" class="header-top__link">
-                        <img src="" alt="" class="header-top__link-img">
+                    <a href="#" class="header-top__link">
+                        <img src="images/icons/instagram-icon.svg" alt="" class="header-top__link-img">
+                    </a>
+                    <a href="#" class="header-top__link">
+                        <img src="images/icons/viber-icon.svg" alt="" class="header-top__link-img">
                     </a>
                 </div>
 
-                <a class="header-top__email" href="mailto:massaznaniy@gmail.com">massaznaniy@gmail.com</a>
+                <a class="header-top__email" href="mailto:massaznaniy@gmail.com">
+                    <img class="header-top__email-img" src="images/icons/Email.png" alt="Email">
+                </a>
             </div>
 
-            <div class="header-bottom"></div>
-
         </div>
+        <nav class="header-menu">
+            <div class="container">
+
+                <ul class="header-menu__items">
+                    <li class="header-menu__item">
+                        <a href="" class="header-menu__link">про нас</a>
+                    </li>
+                    <li class="header-menu__item header-menu__item--drops">
+                        <a href="javascript:void(0);" tabindex="1"
+                            class="header-menu__link header-menu__link--drop">курси</a>
+
+
+                        <ul class="header-menu__items--drop">
+                            <li class="header-menu__item--drop">
+                                <a href="" class="header-menu__link--drop">зно</a>
+                            </li>
+                            <li class="header-menu__item--drop">
+                                <a href="" class="header-menu__link--drop">дпа</a>
+                            </li>
+                            <li class="header-menu__item--drop">
+                                <a href="" class="header-menu__link--drop">шкільні заняття</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="header-menu__item">
+                        <a href="" class="header-menu__link">відгуки</a>
+                    </li>
+                    <li class="header-menu__item">
+                        <a href="" class="header-menu__link">оплата</a>
+                    </li>
+                    <li class="header-menu__item">
+                        <a href="" class="header-menu__link">часті питання</a>
+                    </li>
+                    <li class="header-menu__item">
+                        <a href="" class="header-menu__link">контакти</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
 
 
@@ -55,7 +98,26 @@
 
 
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="container">
+
+            <div class="footer__inner">
+
+                <a href="" class="footer__politics">ПОЛІТИКА КОНФІДЕНЦІЙНОСТІ</a>
+                <p class="footer__rights">© MASSAZNANIY 2021</p>
+                <div class="footer__designer">
+                    <p class="footer__designer-name">ДИЗАЙН - TKANOVA V.</p>
+                    <a href="#" class="footer__designer-link">
+                        <img src="images/icons/behance.svg" alt="behance" class="footer__designer-img">
+                    </a>
+                    <a href="#" class="footer__designer-link">
+                        <img src="images/icons/linkedin.svg" alt="linkedin" class="footer__designer-img">
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </footer>
 
 
 
