added a dropdown function

--- a/app/index.html
+++ b/app/index.html
@@ -25,16 +25,16 @@
 
 
                 <div class="header-top__links">
-                    <a href="#" class="header-top__link">
+                    <a href="https://www.facebook.com/profile.php?id=100071020248763" class="header-top__link">
                         <img src="images/icons/facebook-icon.svg" alt="" class="header-top__link-img">
                     </a>
-                    <a href="#" class="header-top__link">
+                    <a href="tg://resolve?domain=massaznaniy" class="header-top__link">
                         <img src="images/icons/telegram-icon.svg" alt="" class="header-top__link-img">
                     </a>
-                    <a href="#" class="header-top__link">
+                    <a href="https://instagram.com/massaznaniy?utm_medium=copy_link" class="header-top__link">
                         <img src="images/icons/instagram-icon.svg" alt="" class="header-top__link-img">
                     </a>
-                    <a href="#" class="header-top__link">
+                    <a href="viber://chat?number=%2B380977485235 " class="header-top__link">
                         <img src="images/icons/viber-icon.svg" alt="" class="header-top__link-img">
                     </a>
                 </div>
@@ -42,6 +42,12 @@
                 <a class="header-top__email" href="mailto:massaznaniy@gmail.com">
                     <img class="header-top__email-img" src="images/icons/Email.png" alt="Email">
                 </a>
+
+                <div class="header-top__mob-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
 
         </div>
@@ -49,20 +55,21 @@
             <div class="container">
 
                 <ul class="header-menu__items">
-                    <li class="header-menu__item">
+                    <li class="header-menu__item header-menu__item--active">
                         <a href="" class="header-menu__link">про нас</a>
                     </li>
                     <li class="header-menu__item header-menu__item--drops">
-                        <a href="javascript:void(0);" tabindex="1"
-                            class="header-menu__link header-menu__link--drop">курси</a>
+                        <a tabindex="1" class="header-menu__link header-menu__link--drop">курси</a>
 
 
                         <ul class="header-menu__items--drop">
                             <li class="header-menu__item--drop">
-                                <a href="" class="header-menu__link--drop">зно</a>
+                                <a href="https://www.w3.org/Style/Examples/007/center.ru.html"
+                                    class="header-menu__link--drop">зно</a>
                             </li>
                             <li class="header-menu__item--drop">
-                                <a href="" class="header-menu__link--drop">дпа</a>
+                                <a href="" class="header-menu__link--drop">дпа
+                                </a>
                             </li>
                             <li class="header-menu__item--drop">
                                 <a href="" class="header-menu__link--drop">шкільні заняття</a>
@@ -107,10 +114,10 @@
                 <p class="footer__rights">© MASSAZNANIY 2021</p>
                 <div class="footer__designer">
                     <p class="footer__designer-name">ДИЗАЙН - TKANOVA V.</p>
-                    <a href="#" class="footer__designer-link">
+                    <a href="https://www.behance.net/valeriatkanova" class="footer__designer-link">
                         <img src="images/icons/behance.svg" alt="behance" class="footer__designer-img">
                     </a>
-                    <a href="#" class="footer__designer-link">
+                    <a href="https://www.linkedin.com/in/valeriatkanova" class="footer__designer-link">
                         <img src="images/icons/linkedin.svg" alt="linkedin" class="footer__designer-img">
                     </a>
                 </div>
