added a pidgotovka page

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ukr">
+<html lang="ru">
 
 <head>
     <title>Massa знань</title>
@@ -21,7 +21,7 @@
 
             <div class="header-top">
 
-                <img class="header-top__logo-img" src="images/logo.png" alt="Логотип Масса знань">
+                <img class="header-top__logo-img" src="images/logo.webp" alt="Логотип Масса знань">
 
 
                 <div class="header-top__links">
@@ -99,7 +99,50 @@
 
 
     <main class="main">
+        <section class="about">
 
+            <div class="container">
+
+                <img class="about__img" src="images/icons/giriya.svg" alt="">
+
+
+                <h1 class="about__title title">Про нас</h1>
+
+                <div class="about__inner frame">
+
+                    <h4 class="about__text">
+                        Ми - дистанційна онлайн-школа MASSA_знань, яка відкриває нашим учням наступні можливості:
+                    </h4>
+
+                    <div class="about__items">
+                        <p class="about__item">
+                            Навчання в групі за індивідуальним графіком
+                        </p>
+                        <p class="about__item">
+                            Навчання без прив'язки до місця проживання
+                        </p>
+                        <p class="about__item">
+                            Відсутність додаткових витрат і можливість планування особистого часу
+                        </p>
+                        <p class="about__item">
+                            Можливість навчатися, подорожувати і займатися улюбленим хобі
+                        </p>
+                        <p class="about__item">
+                            Ми працюємо на результат за приємну плату!
+                        </p>
+                    </div>
+
+                    <p class="about__descr">
+                        Ми - найбільша онлайн-школа України!
+                        Наша мета - якісний і швидкий результат!
+                        Отримай МАСУ ЗНАНЬ разом з нами!
+
+                    </p>
+                </div>
+
+            </div>
+
+        </section>
     </main>
 
 
