--- a/app/page.html
+++ b/app/page.html
@@ -21,7 +21,7 @@
 
             <div class="header-top">
 
-                <img class="header-top__logo-img" src="images/logo.png" alt="Логотип Масса знань">
+                <img class="header-top__logo-img" src="images/logo.webp" alt="Логотип Масса знань">
 
 
                 <div class="header-top__links">
