added tabs nav for pidgotovka page

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
 
                 <ul class="header-menu__items">
                     <li class="header-menu__item header-menu__item--active">
-                        <a href="" class="header-menu__link">про нас</a>
+                        <a href="index.html" class="header-menu__link">про нас</a>
                     </li>
                     <li class="header-menu__item header-menu__item--drops">
                         <a tabindex="1" class="header-menu__link header-menu__link--drop">курси</a>
@@ -64,29 +64,28 @@
 
                         <ul class="header-menu__items--drop">
                             <li class="header-menu__item--drop">
-                                <a href="https://www.w3.org/Style/Examples/007/center.ru.html"
-                                    class="header-menu__link--drop">зно</a>
+                                <a href="pidgotovka-zno.html" class="header-menu__link--drop">зно</a>
                             </li>
                             <li class="header-menu__item--drop">
-                                <a href="" class="header-menu__link--drop">дпа
+                                <a href="pidgotovka-dpa.html" class="header-menu__link--drop">дпа
                                 </a>
                             </li>
                             <li class="header-menu__item--drop">
-                                <a href="" class="header-menu__link--drop">шкільні заняття</a>
+                                <a href="school-lessons.html" class="header-menu__link--drop">шкільні заняття</a>
                             </li>
                         </ul>
                     </li>
                     <li class="header-menu__item">
-                        <a href="" class="header-menu__link">відгуки</a>
+                        <a href="reviews.html" class="header-menu__link">відгуки</a>
                     </li>
                     <li class="header-menu__item">
-                        <a href="" class="header-menu__link">оплата</a>
+                        <a href="payment.html" class="header-menu__link">оплата</a>
                     </li>
                     <li class="header-menu__item">
-                        <a href="" class="header-menu__link">часті питання</a>
+                        <a href="questions.html" class="header-menu__link">часті питання</a>
                     </li>
                     <li class="header-menu__item">
-                        <a href="" class="header-menu__link">контакти</a>
+                        <a href="contacts.html" class="header-menu__link">контакти</a>
                     </li>
                 </ul>
             </div>
