added school-lessons page with responsive size

--- a/app/pidgotovka-zno.html
+++ b/app/pidgotovka-zno.html
@@ -815,7 +815,7 @@
 
             <div class="footer__inner">
 
-                <a href="" class="footer__politics">ПОЛІТИКА КОНФІДЕНЦІЙНОСТІ</a>
+                <a href="politics.html" class="footer__politics">ПОЛІТИКА КОНФІДЕНЦІЙНОСТІ</a>
                 <p class="footer__rights">© MASSAZNANIY 2021</p>
                 <div class="footer__designer">
                     <p class="footer__designer-name">ДИЗАЙН - TKANOVA V.</p>
