added a registration page

--- a/app/registration.html
+++ b/app/registration.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ukr">
+<html lang="ru">
 
 <head>
     <title>Massa знань</title>
@@ -55,7 +55,7 @@
             <div class="container">
 
                 <ul class="header-menu__items">
-                    <li class="header-menu__item header-menu__item--active">
+                    <li class="header-menu__item">
                         <a href="index.html" class="header-menu__link">про нас</a>
                     </li>
                     <li class="header-menu__item header-menu__item--drops">
@@ -98,7 +98,54 @@
 
 
     <main class="main">
+        <section class="about about__reg">
 
+            <div class="container">
+
+                <h1 class="about__title about__title-reg title">регістрація на тестування</h1>
+
+                <div class="about__inner about__inner-reg frame">
+
+                    <h4 class="about__text about__text-reg">
+                        Що отримує учень нашої онлайн-школи?
+                    </h4>
+
+                    <div class="about__items about__items-reg">
+                        <p class="about__item">
+                            Контакт з учителем і живі онлайн-уроки
+                        </p>
+                        <p class="about__item">
+                            Авторські матеріали для доступного навчання
+                        </p>
+                        <p class="about__item">
+                            Постійний контроль і перевірка домашнього завдання
+                        </p>
+                        <p class="about__item">
+                            Допомога викладача 24/7
+                        </p>
+                        <p class="about__item">
+                            Зручний графік і правильно спланований день
+                        </p>
+                        <p class="about__item">
+                            Освітні відеоматеріали і кейси для кращого сприйняття матеріалу
+                        </p>
+                    </div>
+
+                    <div class="about__btns">
+
+                        <a href="payment.html" class="about__btn-order">
+                            записатися на бескоштовне тестування
+                        </a>
+                        <a href="school-lessons.html" class="about__btn-back">
+                            повернутися до переліку
+                        </a>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
     </main>
 
 
